group 'org.experitest'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8


repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
    compile 'io.appium:java-client:4.1.2'
    compile 'org.openqa.selenium:selenium-rc:1.0-20081010.060147'
}
task runBasic(type: JavaExec){
    classpath = sourceSets.main.runtimeClasspath
    main = 'Basic'
}